--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	      <li><a href="/">Home</a></li>
 	      <li><a href="/about">Where Am I?</a></li>
 	      <li><a href="/cindy">Who Are You?</a></li>
-	      <li><a href="/contact">Contact</a></li>
+	      <li class="active"><a href="/contact">Contact</a></li>
 	    </ul>
 	  </nav>
 	</div><!-- end header -->
