--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 	
 	<br>
 	
+	<h1><a href="/cindy">Contact Me!</a></h1>
+	<p></p>
+
       </div>
 
       <div id="content">
 	<p>
-	  Email:
+	  Email: (Will not be released for now)
 	  <br>
-	  Phone:
+	  Phone: (Will not be released for now)
 	</p>
       </div>
 
